# OS-2023

./: README.md
Lab10/: CMakeLists.txt
Lab10/include/cse4733/: MMU.hpp  TLB.hpp
Lab10/src/: MMU.cpp  TLB.cpp  main.cpp
Lab11/: CMakeLists.txt
Lab11/src/: main.cpp
Lab15/: CMakeLists.txt
Lab15/src/: main.cpp
Lab16/: CMakeLists.txt
Lab16/include/cse4733/: power_calculator.hpp
Lab16/src/: main.cpp  power_calculator.cpp
Lab17/: CMakeLists.txt
Lab17/src/: main.cpp  main.cpp~
Lab18/: CMakeLists.txt
Lab18/src/: main.cpp
Lab2/: CMakeLists.txt
Lab2/include/cse4733/: process.hpp
Lab2/src/: main.cpp  process.cpp  process.cpp.autosave
Lab3/: CMakeLists.txt
Lab3/include/cse4733/: first_come_first_served.hpp  process.hpp  round_robin.hpp  shortest_job_first.hpp
Lab3/src/: first_come_first_served.cpp  main.cpp  process.cpp  round_robin.cpp  shortest_job_first.cpp
Lab5/: CMakeLists.txt
Lab5/src/: MemoryAllocator.cpp  MemoryAllocator.h  Process.cpp  Process.h  main.cpp
Lab6/: CMakeLists.txt
Lab6/src/: main.cpp
Lab7/: CMakeLists.txt  eg1005_lab7.txt
Lab7/data/: config.json  config.json~
Lab7/include/cse4733/: AddressTranslator.hpp  ConfigParser.hpp  ConfigParser.hpp~  Memory.hpp  Memory.hpp~  Segment.hpp
Lab7/src/: AddressTranslator.cpp  ConfigParser.cpp  Memory.cpp  Memory.cpp~  Segment.cpp  main.cpp
